test/expected/dynamic_cast_i.out
dynamic cast x into int
                    ^
21: error: dynamic_cast must be to a pointer or reference to a class, struct, or union
